Name:                tls-extra
Version:             0.4.3
Description:
   a set of extra definitions, default values and helpers for tls.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            TLS extra default values and helpers
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-tls-extra

Flag test
  Description:       Build unit test
  Default:           False

Flag bench
  Description:       Build benchmarks
  Default:           False

Flag executable
  Description:       Build the executable
  Default:           False

Library
  Build-Depends:     base > 3 && < 5
                   , tls >= 0.9.0 && < 1.0.0
                   , mtl
                   , network >= 2.3
                   , cryptohash >= 0.6
                   , bytestring
                   , vector
                   , crypto-api >= 0.5
                   , cryptocipher >= 0.3.0
                   , certificate >= 1.1.0 && < 1.2.0
                   , text >= 0.5 && < 1.0
                   , time
  Exposed-modules:   Network.TLS.Extra
  other-modules:     Network.TLS.Extra.Certificate
                     Network.TLS.Extra.Cipher
                     Network.TLS.Extra.Compression
                     Network.TLS.Extra.Connection
                     Network.TLS.Extra.Thread
  ghc-options:       -Wall -fno-warn-missing-signatures
  if os(windows) || os(osx)
    cpp-options:     -DNOCERTVERIFY

Executable           stunnel
  Main-is:           Examples/Stunnel.hs
  if flag(executable)
    Build-Depends:   network
                   , cmdargs
                   , cprng-aes >= 0.2.3
    Buildable:       True
  else
    Buildable:       False
  ghc-options:       -Wall -fno-warn-missing-signatures

Executable           checkciphers
  Main-is:           Examples/CheckCiphers.hs
  if flag(executable)
    Build-Depends:   network
                   , cmdargs
                   , cprng-aes
    Buildable:       True
  else
    Buildable:       False
  ghc-options:       -Wall -fno-warn-missing-signatures

Executable           retrievecertificate
  Main-is:           Examples/RetrieveCertificate.hs
  if flag(executable)
    Build-Depends:   network
                   , cmdargs
                   , cprng-aes >= 0.2.3
    Buildable:       True
  else
    Buildable:       False
  ghc-options:       -Wall -fno-warn-missing-signatures

Executable           simpleclient
  Main-is:           Examples/SimpleClient.hs
  if flag(executable)
    Build-Depends:   network
                   , cmdargs
                   , cprng-aes >= 0.2.3
    Buildable:       True
  else
    Buildable:       False
  ghc-options:       -Wall -fno-warn-missing-signatures

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 5
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
  else
    Buildable:       False

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-tls-extra
