Name:                tls-extra
Version:             0.4.6
Description:
   a set of extra definitions, default values and helpers for tls.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            TLS extra default values and helpers
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-tls-extra

Flag test
  Description:       Build unit test
  Default:           False

Library
  Build-Depends:     base > 3 && < 5
                   , tls >= 0.9.4 && < 1.0.0
                   , mtl
                   , network >= 2.3
                   , cryptohash >= 0.6
                   , bytestring
                   , vector
                   , crypto-api >= 0.5
                   , cryptocipher >= 0.3.0 && < 0.4.0
                   , certificate >= 1.2.0 && < 1.3.0
                   , pem >= 0.1.0 && < 0.2.0
                   , text >= 0.5 && < 1.0
                   , time
  Exposed-modules:   Network.TLS.Extra
  other-modules:     Network.TLS.Extra.Certificate
                     Network.TLS.Extra.Cipher
                     Network.TLS.Extra.Compression
                     Network.TLS.Extra.Connection
                     Network.TLS.Extra.Thread
                     Network.TLS.Extra.File
  ghc-options:       -Wall -fno-warn-missing-signatures
  if os(windows)
    cpp-options:     -DNOCERTVERIFY

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 5
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
                   , cprng-aes >= 0.2.3
  else
    Buildable:       False

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-tls-extra
