Name:                tls
Version:             0.4.0
Description:
   native TLS protocol implementation, focusing on purity and more type-checking.
   .
   Currently implement the SSL3.0, TLS1.0 and TLS1.1 protocol.
   Not yet properly secure and missing some features.
   Do not yet use as replacement to more mature implementation.
   .
   only RSA supported as Key exchange for now.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            TLS/SSL protocol native implementation (Server and Client)
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-tls
data-files:          README, TODO

Flag test
  Description:       Build unit test
  Default:           False

Flag executable
  Description:       Build the executable
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , cryptohash >= 0.6
                   , binary >= 0.5
                   , cereal >= 0.3
                   , bytestring
                   , vector
                   , crypto-api >= 0.5
                   , cryptocipher >= 0.2.5
                   , certificate >= 0.7 && < 0.8
  Exposed-modules:   Network.TLS
                     Network.TLS.Cipher
                     Network.TLS.Compression
  other-modules:     Network.TLS.Cap
                     Network.TLS.SRandom
                     Network.TLS.Struct
                     Network.TLS.MAC
                     Network.TLS.Core
                     Network.TLS.Crypto
                     Network.TLS.Packet
                     Network.TLS.State
                     Network.TLS.Sending
                     Network.TLS.Receiving
                     Network.TLS.Util
                     Network.TLS.Wire
  ghc-options:       -Wall

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 5
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
  else
    Buildable:       False

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-tls
