Name:                tls
Version:             0.8.1
Description:
   Native Haskell TLS and SSL protocol implementation for server and client.
   .
   This provides a high-level implementation of a sensitive security protocol,
   eliminating a common set of security issues through the use of the advanced
   type system, high level constructions and common Haskell features.
   .
   Currently implement the SSL3.0, TLS1.0, TLS1.1 and TLS1.2 protocol,
   with only RSA supported for Key Exchange.
   .
   Only core protocol available here, have a look at the
   <http://hackage.haskell.org/package/tls-extra/> package for default
   ciphers, compressions and certificates functions.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            TLS/SSL protocol native implementation (Server and Client)
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-tls
data-files:          README.md, TODO

Flag test
  Description:       Build unit test
  Default:           False

Flag executable
  Description:       Build the executable
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , cryptohash >= 0.6
                   , cereal >= 0.3
                   , bytestring
                   , crypto-api >= 0.5
                   , cryptocipher >= 0.2.5
                   , certificate >= 0.9.4 && < 1.0
  Exposed-modules:   Network.TLS
                     Network.TLS.Cipher
                     Network.TLS.Compression
                     Network.TLS.Internal
  other-modules:     Network.TLS.Cap
                     Network.TLS.Struct
                     Network.TLS.MAC
                     Network.TLS.Core
                     Network.TLS.Crypto
                     Network.TLS.Packet
                     Network.TLS.Record
                     Network.TLS.State
                     Network.TLS.Sending
                     Network.TLS.Receiving
                     Network.TLS.Util
                     Network.TLS.Wire
  ghc-options:       -Wall

executable           Tests
  Main-is:           Tests.hs
  if flag(test)
    Buildable:       True
    Build-Depends:   base >= 3 && < 5
                   , HUnit
                   , QuickCheck >= 2
                   , bytestring
  else
    Buildable:       False

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-tls
