Name:                tls-debug
Version:             0.4.7
Description:
   A set of program to test and debug various aspect of the TLS package.
   .
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Set of programs for TLS testing and debugging
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-tls

Executable           tls-stunnel
  Main-is:           Stunnel.hs
  Other-modules:     Common
                   , Imports
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 5
                   , network
                   , bytestring
                   , x509-store
                   , x509-system >= 1.0
                   , x509-validation >= 1.5
                   , data-default-class
                   , cryptonite >= 0.24
                   , tls >= 1.5.0
                   , tls-session-manager
  if os(windows)
    Buildable:       False
  else
    Buildable:       True
  ghc-options:       -Wall -fno-warn-missing-signatures

-- Executable           tls-checkciphers
--   Main-is:           CheckCiphers.hs
--   Hs-Source-Dirs:    src
--   Build-Depends:     base >= 4 && < 5
--                    , network
--                    , bytestring
--                    , cprng-aes
--                    , x509-system >= 1.0
--                    , tls >= 1.2 && < 1.6
--   Buildable:         True
--   ghc-options:       -Wall -fno-warn-missing-signatures

Executable           tls-retrievecertificate
  Main-is:           RetrieveCertificate.hs
  Other-modules:     Imports
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 5
                   , network
                   , bytestring
                   , pem
                   , x509
                   , x509-system >= 1.4
                   , x509-validation >= 1.5
                   , data-default-class
                   , tls >= 1.3 && < 1.6
  Buildable:         True
  ghc-options:       -Wall -fno-warn-missing-signatures

Executable           tls-simpleclient
  Main-is:           SimpleClient.hs
  Other-modules:     Common
                   , HexDump
                   , Imports
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 5
                   , network
                   , bytestring
                   , data-default-class
                   , cryptonite >= 0.14
                   , x509-store
                   , x509-system >= 1.0
                   , tls >= 1.5.0 && < 1.6
  Buildable:         True
  ghc-options:       -Wall -fno-warn-missing-signatures

Executable           tls-simpleserver
  Main-is:           SimpleServer.hs
  Other-modules:     Common
                   , HexDump
                   , Imports
  Hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 5
                   , network
                   , bytestring
                   , data-default-class
                   , cryptonite
                   , x509-store
                   , x509-system >= 1.0
                   , tls >= 1.5.0 && < 1.6
                   , tls-session-manager
  Buildable:         True
  ghc-options:       -Wall -fno-warn-missing-signatures

source-repository head
  type: git
  location: https://github.com/vincenthz/hs-tls
