cabal-version: >=1.10
name:          tls-debug
version:       0.4.8
license:       BSD3
license-file:  LICENSE
copyright:     Vincent Hanquez <vincent@snarc.org>
maintainer:    Vincent Hanquez <vincent@snarc.org>
author:        Vincent Hanquez <vincent@snarc.org>
stability:     experimental
homepage:      http://github.com/vincenthz/hs-tls
synopsis:      Set of programs for TLS testing and debugging
description:
    A set of program to test and debug various aspect of the TLS package.
    .

category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/vincenthz/hs-tls

executable tls-stunnel
    main-is:          Stunnel.hs
    hs-source-dirs:   src
    other-modules:
        Common
        Imports

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        crypton-x509-store,
        crypton-x509-system >=1.0,
        crypton-x509-validation >=1.5,
        data-default,
        crypton,
        tls >=1.5.5,
        tls-session-manager

    if os(windows)
        buildable: False

    else

executable tls-retrievecertificate
    main-is:          RetrieveCertificate.hs
    hs-source-dirs:   src
    other-modules:    Imports
    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        pem,
        crypton-x509,
        crypton-x509-system >=1.4,
        crypton-x509-validation >=1.5,
        data-default,
        tls >=1.3

executable tls-simpleclient
    main-is:          SimpleClient.hs
    hs-source-dirs:   src
    other-modules:
        Common
        HexDump
        Imports

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        data-default,
        crypton,
        crypton-x509-store,
        crypton-x509-system >=1.0,
        tls >=1.5.5

executable tls-simpleserver
    main-is:          SimpleServer.hs
    hs-source-dirs:   src
    other-modules:
        Common
        HexDump
        Imports

    default-language: Haskell2010
    ghc-options:      -Wall -fno-warn-missing-signatures
    build-depends:
        base >=4 && <5,
        network,
        bytestring,
        data-default,
        crypton,
        crypton-x509-store,
        crypton-x509-system >=1.0,
        tls >=1.5.5,
        tls-session-manager
